<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:text="@string/add_a_task"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextTask"
            android:hint="@string/task"/>
        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
        <EditText
            android:id="@+id/editTextFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/save"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>