<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatus"
            android:layout_marginBottom="5dp"
            android:text="@string/completed"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spdp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />
        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/textViewFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5pm_today"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>